[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/asset-manager/missing.png" type="Texture" id=1]
[ext_resource path="res://addons/asset-manager/LibraryItem.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0.180392 )
border_width_left = 2
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0.0627451 )
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0.196078 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="Image" id=9]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=4]
flags = 4
flags = 4
image = SubResource( 9 )
size = Vector2( 16, 16 )

[node name="LibraryItem" type="HBoxContainer"]
margin_right = 28.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 20 )
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 10.0
margin_bottom = 46.0
rect_min_size = Vector2( 10, 0 )

[node name="Item" type="Button" parent="."]
margin_left = 10.0
margin_right = 244.0
margin_bottom = 46.0
rect_min_size = Vector2( 20, 20 )
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_constants/hseparation = 5
text = "Test"
icon = ExtResource( 1 )
align = 0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenScene" type="Button" parent="."]
visible = false
margin_left = 56.0
margin_right = 76.0
margin_bottom = 22.0
rect_min_size = Vector2( 20, 20 )
mouse_filter = 1
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
icon = SubResource( 4 )

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
items = [ "", null, 0, false, false, 0, 0, null, "", false, "", null, 0, false, true, 1, 0, null, "", true, "Edit Asset Info", SubResource( 4 ), 0, false, true, 2, 0, null, "", false, "Delete from Asset Manager", SubResource( 4 ), 0, false, false, 3, 0, null, "", false, "Copy Node Path", SubResource( 4 ), 0, false, false, 4, 0, null, "", false, "Select in FileSystem", SubResource( 4 ), 0, false, false, 5, 0, null, "", false ]
hide_on_state_item_selection = true

[node name="DeletePopup" type="PopupPanel" parent="."]
margin_left = 31.0
margin_right = 244.0
margin_bottom = 46.0

[node name="VBox" type="VBoxContainer" parent="DeletePopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 209.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeletePopup/VBox"]
margin_right = 205.0
margin_bottom = 14.0
text = "Delete file from Asset Manager?"

[node name="HBox" type="HBoxContainer" parent="DeletePopup/VBox"]
margin_top = 18.0
margin_right = 205.0
margin_bottom = 38.0
custom_constants/separation = 30

[node name="Delete" type="Button" parent="DeletePopup/VBox/HBox"]
modulate = Color( 1.5, 1, 1, 1 )
margin_right = 87.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Delete"

[node name="Cancel" type="Button" parent="DeletePopup/VBox/HBox"]
margin_left = 117.0
margin_right = 205.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Cancel"

[connection signal="mouse_entered" from="." to="." method="_on_LibraryItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_LibraryItem_mouse_exited"]
[connection signal="button_down" from="Item" to="." method="_on_LibraryItem_button_down"]
[connection signal="gui_input" from="Item" to="." method="_on_Item_gui_input"]
[connection signal="mouse_entered" from="OpenScene" to="." method="_on_OpenScene_mouse_entered"]
[connection signal="mouse_exited" from="OpenScene" to="." method="_on_OpenScene_mouse_exited"]
[connection signal="pressed" from="OpenScene" to="." method="_on_OpenScene_pressed"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="pressed" from="DeletePopup/VBox/HBox/Delete" to="." method="delete_from_asset_library"]
[connection signal="pressed" from="DeletePopup/VBox/HBox/Cancel" to="." method="_cancel_delete"]
